[package]
name = "ds1307"
version = "0.3.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/ds1307-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the DS1307 real-time clock."
readme = "README.md"
keywords = ["ds1307", "rtc", "clock", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/ds1307-rs"
documentation = "https://docs.rs/ds1307"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[badges]
travis-ci = { repository = "eldruin/ds1307-rs", branch = "master" }
coveralls = { repository = "eldruin/ds1307-rs", branch = "master", service = "github" }

[dependencies]
embedded-hal = "0.2"
rtcc = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
