[package]
name = "ds1307"
version = "0.6.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/ds1307-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the DS1307 real-time clock."
readme = "README.md"
keywords = ["ds1307", "rtc", "clock", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/ds1307-rs"
documentation = "https://docs.rs/ds1307"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2021"
rust-version = "1.62"

[dependencies]
embedded-hal = "1.0"
rtcc = "0.3"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version = "0.10", default-features = false, features = ["eh1"]}

[profile.release]
lto = true
